--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,8 @@
 
     <properties>
         <java.version>1.8</java.version>
+        <jetty.version>9.4.26.v20200117</jetty.version>
+        <!--<jetty-jsp.version>2.2.0.v201112011158</jetty-jsp.version>-->
     </properties>
 
     <dependencies>
@@ -49,8 +51,8 @@
         </dependency>
         <dependency>
             <groupId>org.apache.spark</groupId>
-            <artifactId>spark-core_2.12</artifactId>
-            <version>2.4.0</version>
+            <artifactId>spark-core_2.11</artifactId>
+            <version>1.4.0</version>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
@@ -58,7 +60,11 @@
             <version>RELEASE</version>
             <scope>compile</scope>
         </dependency>
-
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.6</version>
+        </dependency>
     </dependencies>
 
     <build>
